<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="20dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:contentDescription="@string/bookmark_add"
            android:focusable="true"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_unfavorite_black_24" />

        <ImageView
            android:id="@+id/iv_avatar_detail"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/rick_sanchez"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar_detail" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:stretchColumns="*"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_detail">

            <TableRow>

                <TextView
                    android:id="@+id/tv_spesies_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/human"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tv_gender_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/male"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_table"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/spesies"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_table"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/gender"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/tv_origin_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/earth"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tv_location_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/earth"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_table"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/origin"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_table"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/location"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>